--- a/Task5.Solution/Task5.Solution.csproj
+++ b/Task5.Solution/Task5.Solution.csproj
@@ -40,6 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoldText.cs" />
+    <Compile Include="Document.cs" />
+    <Compile Include="DocumentPart.cs" />
+    <Compile Include="DocumentPartsExtensions.cs" />
+    <Compile Include="HtmlVisitor.cs" />
+    <Compile Include="Hyperlink.cs" />
+    <Compile Include="LatexVisitor.cs" />
+    <Compile Include="PlainText.cs" />
+    <Compile Include="Visitor.cs" />
+    <Compile Include="PlainTextVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
